<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Gymbox</string>
    <string name="loginToast">Login successfully!</string>
    <string name="loginToastFailed">Login failed!</string>
    <string name="verifyEmailToastEmailFailed">Please enter an email address!</string>
    <string name="verifyEmailToastEmailInvalid">Invalid email address!</string>
    <string name="verifyPasswordToastPasswordFailed">Please enter a password!</string>
    <string name="verifyPasswordToastPasswordCharFailed">Your password must have at least 6 characters!</string>
    <string name="verifyPasswordToastPasswordLetterFailed">Your password must be at least 1 letter!</string>
    <string name="verifyPasswordToastPasswordNumberFailed">Your password must be at least 1 number!</string>
    <string name="registerUser">Registration successfully complete!</string>
    <string name="registerUserFailed">This email address is already in use!</string>
    <string name="sendResetMail">An email has been sent to your email address!</string>
    <string name="sendResetMailFailed">This email address is not registered!</string>
    <string name="enterToast">Welcome, </string>
    <string name="enterToastAlternative">Welcome to Gymbox!</string>
    <string name="verifyFirstLastNameEmptyFirstName">Enter your first name!</string>
    <string name="verifyFirstLastNameLongFirstName">Your first name is too big! Enter a nickname.</string>
    <string name="verifyFirstLastNameInvalidFirstName">Your first name contains spaces, numbers, or invalid characters! Remove them and try again.</string>
    <string name="verifyFirstLastNameEmptyLastName">Enter your last name!</string>
    <string name="verifyFirstLastNameLongLastName">Your last name is too big! Enter a nickname.</string>
    <string name="verifyFirstLastNameInvalidLastName">Your last name contains spaces, numbers, or invalid characters! Remove them and try again.</string>
    <string name="registerActivityToastFirstConfirm">First name and last name updated! Welcome, </string>
    <string name="registerActivityToastFirstConfirmFailed">First name and last name not updated! An error has occurred.</string>
    <string name="registerActivityToastSecondConfirm">First name and last name updated!</string>
    <string name="registerActivityToastSecondConfirmFailed">First name and last name not updated! An error has occurred.</string>
    <string name="registerActivityToastSecondConfirmEmail">Email address updated!</string>
    <string name="registerActivityToastSecondConfirmPassword">Password updated!</string>
    <string name="registerActivityToastSecondConfirmPasswordFailed">Password not updated! An error has occurred.</string>
    <string name="registerActivityToastSecondConfirmEmailFailed">Email address not updated! An error has occurred.</string>
    <string name="registerActivityToastSecondConfirmEmailFailed2">Email address not updated! This email address may be in use.</string>
    <string name="registerActivityToastSecondConfirmAuthentication">Your current password is incorrect.</string>
    <string name="registerActivityToastSecondConfirmAuthenticationFailed">Your current password is empty.</string>
    <string name="verifyPINToastPINFailed">Enter your PIN!</string>
    <string name="verifyPINToastPINLengthFailed">Your PIN must have 6 numbers!</string>
    <string name="verifyPINToastPINCharFailed">Your PIN must have only numbers!</string>
    <string name="redeemToastAccesses">Welcome, </string>
    <string name="redeemToastAccessesFailed">Sorry, you do not have enough access!</string>
    <string name="mainActivityTitle">Gymbox</string>
    <string name="mainActivityEmail">Email</string>
    <string name="mainActivityPassword">Password</string>
    <string name="mainActivityForgotMyPassword"><u>Forgot my password</u></string>
    <string name="mainActivityAccess">Access</string>
    <string name="mainActivityRegister">Register</string>
    <string name="mainActivityGym">Gym</string>
    <string name="gymActivityUser">User</string>
    <string name="gymActivityPIN">PIN</string>
    <string name="gymActivityRedeem">Redeem</string>
    <string name="disconnect">Disconnect</string>
    <string name="changeRegister">Change register</string>
    <string name="studentActivityPurchaseAccess">Purchase access</string>
    <string name="studentActivityRemainingAccesses">Remaining accesses</string>
    <string name="buyActivity100Accesses">Purchase 100 accesses</string>
    <string name="buyActivity50Accesses">Purchase 100 accesses</string>
    <string name="buyActivity25Accesses">Purchase 100 accesses</string>
    <string name="buyActivity10Accesses">Purchase 100 accesses</string>
    <string name="back">Back</string>
    <string name="confirmActivityDoYouWantToPurchase">Do you want to purchase</string>
    <string name="confirmActivityNAccesses">N accesses</string>
    <string name="confirmActivityFor">For</string>
    <string name="confirmActivityX">R$0,00?</string>
    <string name="confirmActivityConfirm">Confirm</string>
    <string name="registerActivityEnterYourFirstName">Enter your first name</string>
    <string name="registerActivityEnterYourLastName">Enter your last name</string>
    <string name="registerActivityEnterYourNewPassword">Enter your new password</string>
    <string name="registerActivityEnterYourCurrentPassword">Enter your current password</string>
    <string name="registerActivityEnterYourNewEmailAddress">Enter your new email address</string>
    <string name="registerActivitySaveEditions">Save editions</string>
    <string name="registerActivityPT">PT</string>
    <string name="registerActivityEN">EN</string>
    <string name="registerActivityView">View</string>
</resources>
