<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/mainActivityForgotMyPassword"
        android:textColor="@color/colorLink"
        android:textSize="14sp"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/mainActivityTitle"
        android:textAlignment="center"
        android:textColor="@color/colorTitle"
        android:textSize="72sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/mainActivityEmail"
        android:backgroundTint="@color/colorFadedText"
        android:ems="10"
        android:fontFamily="@font/josefin_sans_bold"
        android:hint="@string/mainActivityEmail"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorFadedText"
        android:textSize="18sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="64dp"
        android:autofillHints="@string/mainActivityPassword"
        android:backgroundTint="@color/colorFadedText"
        android:ems="10"
        android:fontFamily="@font/josefin_sans_bold"
        android:hint="@string/mainActivityPassword"
        android:inputType="textPassword"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorFadedText"
        android:textSize="18sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toTopOf="@+id/bAccess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bAccess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="8dp"
        android:height="64dp"
        android:backgroundTint="@color/colorButton"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/mainActivityAccess"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/bRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="64dp"
        android:height="48dp"
        android:backgroundTint="@color/colorFadedButton"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/mainActivityRegister"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bGym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorFadedButton"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/mainActivityGym"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>