<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/colorBackground">

    <EditText
        android:id="@+id/etNewEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/registerActivityEnterYourNewEmailAddress"
        android:backgroundTint="@color/colorFadedText"
        android:ems="10"
        android:fontFamily="@font/josefin_sans_bold"
        android:hint="@string/registerActivityEnterYourNewEmailAddress"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorFadedText"
        android:textSize="18sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toTopOf="@+id/etNewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/registerActivityEnterYourFirstName"
        android:backgroundTint="@color/colorFadedText"
        android:ems="10"
        android:fontFamily="@font/josefin_sans_bold"
        android:hint="@string/registerActivityEnterYourFirstName"
        android:inputType="text"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorFadedText"
        android:textSize="18sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toTopOf="@+id/etLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/mainActivityEmail"
        android:backgroundTint="@color/colorFadedText"
        android:ems="10"
        android:fontFamily="@font/josefin_sans_bold"
        android:hint="@string/registerActivityEnterYourLastName"
        android:inputType="text"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorFadedText"
        android:textSize="18sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toTopOf="@+id/etNewEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="@string/registerActivityEnterYourNewPassword"
        android:backgroundTint="@color/colorFadedText"
        android:ems="10"
        android:fontFamily="@font/josefin_sans_bold"
        android:hint="@string/registerActivityEnterYourNewPassword"
        android:inputType="textPassword"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorFadedText"
        android:textSize="18sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toTopOf="@+id/bPT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/registerActivityEnterYourCurrentPassword"
        android:backgroundTint="@color/colorFadedText"
        android:ems="10"
        android:fontFamily="@font/josefin_sans_bold"
        android:hint="@string/registerActivityEnterYourCurrentPassword"
        android:inputType="textPassword"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorFadedText"
        android:textSize="18sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toTopOf="@+id/bConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/bPT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/colorButton"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/registerActivityPT"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@+id/etNewPassword" />

    <Button
        android:id="@+id/bEN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/colorFadedButton"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/registerActivityEN"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="@+id/etNewPassword" />

    <Button
        android:id="@+id/bView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorFadedButton"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/registerActivityView"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/etNewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etNewPassword"
        app:layout_constraintTop_toTopOf="@+id/etNewPassword"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/bView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorFadedButton"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/registerActivityView"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etPassword"
        app:layout_constraintTop_toTopOf="@+id/etPassword"
        android:visibility="invisible" />

    <Button
        android:id="@+id/bConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:height="64dp"
        android:backgroundTint="@color/colorButton"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/registerActivitySaveEditions"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/bReturn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/bReturn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:height="48dp"
        android:backgroundTint="@color/colorFadedButton"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/back"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bConfirm"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bConfirm" />

</androidx.constraintlayout.widget.ConstraintLayout>